@@ -7,8 +7,9 @@ import { useUser, useDoc, useFirestore, useMemoFirebase } from '@/firebase';
 import { useRouter } from 'next/navigation';
 import { useEffect } from 'react';
 import { doc } from 'firebase/firestore';
+import { Loader2 } from 'lucide-react';
 
-export default function AppLayout({
+export default function AthleteLayout({
   children,
 }: Readonly<{
   children: React.ReactNode;
@@ -27,38 +28,35 @@ export default function AppLayout({
   const isLoading = isUserLoading || isProfileLoading;
 
   useEffect(() => {
-    if (!isLoading) {
-      if (!user) {
-        router.push('/login');
-      } else if (userProfile?.role === 'athlete') {
-        router.push('/athlete/dashboard');
-      } else if (userProfile?.role === 'trainer') {
-        router.push('/trainer/dashboard');
-      } else if (userProfile?.role === 'admin') {
-        router.push('/admin/dashboard');
-      }
-    }
+    
   }, [user, userProfile, isLoading, router]);
 
-  // If loading, or not logged in, or is an admin, show loading screen or null.
-  // The useEffect will handle the redirect.
-  if (isLoading || !user) {
+  // Render loading state until we are certain about the user's auth state and role.
+  // This prevents child components from rendering and attempting to fetch data prematurely.
+  if (isLoading) {
     return (
       <div className="flex min-h-screen items-center justify-center">
-        <p>Ładowanie...</p>
+        <div className="flex flex-col items-center gap-2">
+            <Loader2 className="h-8 w-8 animate-spin text-muted-foreground" />
+            <p className="text-muted-foreground">Weryfikacja uprawnień...</p>
+        </div>
       </div>
     );
   }
 
-  if (userProfile?.role === 'admin' || userProfile?.role === 'trainer' || userProfile?.role === 'athlete') {
-    return null; // Return null to prevent rendering this layout before redirect
+  // If after loading, the user is still not an athlete, render nothing.
+  // The useEffect will handle the redirect.
+  if (userProfile?.role !== 'athlete') {
+    return null;
   }
 
+  // At this point, user is loaded, logged in, and is confirmed to be an athlete.
+  // It is now safe to render the athlete layout and its children.
   return (
     <SidebarProvider>
       <div className="flex min-h-screen">
         <AppNav />
-        <main className="flex flex-1 flex-col bg-secondary/30">
+        <main className="flex-1 flex-col overflow-y-auto bg-secondary/30">
           <AppHeader />
           <div className="flex-1 overflow-y-auto">{children}</div>
         </main>
@@ -66,3 +64,4 @@ export default function AppLayout({
     </SidebarProvider>
   );
 }
+
